--- a/Vue App/vue-app/index.html
+++ b/Vue App/vue-app/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Library</title>
+    <title>Songs database</title>
   </head>
   <body>
     <div id="app">
       <App></App>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
